--- a/kubernetes/clusters/k2s/media/immich/database/cluster.yaml
+++ b/kubernetes/clusters/k2s/media/immich/database/cluster.yaml
@@ -49,7 +49,7 @@ spec:
       wal:
         compression: bzip2
         maxParallel: 8
-      destinationPath: s3://pg-backup/immich-db
+      destinationPath: s3://immich
       endpointURL: "https://minio.logfold.com"
       serverName: &currentCluster immich-2
       s3Credentials:
@@ -62,7 +62,7 @@ spec:
   externalClusters:
   - name: *previousCluster
     barmanObjectStore:
-      destinationPath: s3://pg-backup/immich-db
+      destinationPath: s3://immich
       endpointURL: "https://minio.logfold.com"
       s3Credentials:
         accessKeyId:
