flip to local svc

--- a/kubernetes/clusters/k0s/monitoring/thanos/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/thanos/app/helmrelease.yaml
@@ -39,7 +39,7 @@ spec:
       config:
         insecure: true
         bucket: thanos
-        endpoint: "minio.${DOMAIN}"
+        endpoint: minio
         region: us-east1
     queryFrontend:
       enabled: true
