--- a/kubernetes/clusters/k0s/monitoring/thanos/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/thanos/app/helmrelease.yaml
@@ -44,15 +44,15 @@ spec:
     queryFrontend:
       enabled: true
       replicaCount: 2
-      # config: &config |-
-      #   type: REDIS
-      #   config:
-      #     addr: >-
-      #       redis-node-0.redis-headless.database.svc.cluster.local:26379,
-      #       redis-node-1.redis-headless.database.svc.cluster.local:26379,
-      #       redis-node-2.redis-headless.database.svc.cluster.local:26379
-      #     db: 13
-      #     master_name: redis-master
+      config: &config |-
+        type: REDIS
+        config:
+          addr: >-
+            redis-node-0.redis-headless.database.svc.cluster.local:26379,
+            redis-node-1.redis-headless.database.svc.cluster.local:26379,
+            redis-node-2.redis-headless.database.svc.cluster.local:26379
+          db: 13
+          master_name: redis-master
       ingress:
         enabled: true
         ingressClassName: nginx
@@ -86,7 +86,7 @@ spec:
     storegateway:
       enabled: true
       replicaCount: 1
-      #config: *config
+      config: *config
       persistence:
         enabled: true
         storageClass: local-path
