--- a/kubernetes/clusters/k0s/monitoring/kustomization.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kustomization.yaml
@@ -8,6 +8,6 @@ resources:
   - ./externalsecret.yaml
   # Flux-Kustomizations
   - ./thanos/ks.yaml
-  - ./victoria-metrics/ks.yaml
+  - ./kube-prometheus-stack/ks.yaml
   - ./unpoller/ks.yaml
   - ./grafana/ks.yaml
