--- a/kubernetes/clusters/shared/kube-system/coredns/app/helmrelease.yaml
+++ b/kubernetes/clusters/shared/kube-system/coredns/app/helmrelease.yaml
@@ -70,13 +70,9 @@ spec:
               192.168.8.242 minio-console.logfold.com
               192.168.8.242 minio.logfold.com
               192.168.8.242 oauth.logfold.com
+              192.168.8.242 prometheus.logfold.com
+              192.168.8.242 thanos-query-frontend.logfold.com/
               192.168.8.242 vault.logfold.com
-              192.168.8.242 vmagent.logfold.com
-              192.168.8.242 vmalert.logfold.com
-              192.168.8.242 vmetrics.logfold.com
-              192.168.8.242 vminsert.logfold.com
-              192.168.8.242 vmlogs.logfold.com
-              192.168.8.242 vmselect.logfold.com
               # external services
               192.168.8.242 adguard.logfold.com
               192.168.8.242 drac.logfold.com
