--- a/kubernetes/clusters/k0s/monitoring/grafana/ks.yaml
+++ b/kubernetes/clusters/k0s/monitoring/grafana/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster-apps-grafana
   namespace: flux-system
 spec:
-  path: ./kubernetes/clusters/k0s/monitoring/grafana/app
+  path: ./kubernetes/clusters/${ENVIRONMENT}/monitoring/grafana/app
   prune: false
   sourceRef:
     kind: GitRepository
