--- a/kubernetes/clusters/shared/kube-system/coredns/app/helmrelease.yaml
+++ b/kubernetes/clusters/shared/kube-system/coredns/app/helmrelease.yaml
@@ -74,6 +74,7 @@ spec:
               192.168.8.242 prometheus.logfold.com
               192.168.8.242 thanos-query-frontend.logfold.com/
               192.168.8.242 vault.logfold.com
+              192.168.8.244 vector.logfold.com
               # external services
               192.168.8.242 adguard.logfold.com
               192.168.8.242 drac.logfold.com
