--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/resources/alertmanager.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/resources/alertmanager.yaml
@@ -30,7 +30,7 @@ receivers:
         slack_api_url: "{{ .SLACK_WEBHOOK }}"
         send_resolved: true
         title: |-
-          [{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] {{ if ne .CommonAnnotations.summary ""}}{{ .CommonAnnotations.summary }}{{ else }}{{ .CommonLabels.alertname }}{{ end }}
+          [{{ .Status }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] {{ if ne .CommonAnnotations.summary ""}}{{ .CommonAnnotations.summary }}{{ else }}{{ .CommonLabels.alertname }}{{ end }}
         text: >-
           {{ range .Alerts -}} 
             **Alert:** {{ .Annotations.title }}{{ if .Labels.severity }} - `{{ .Labels.severity }}`{{ end }}
