--- a/kubernetes/clusters/k2s/home-automation/home-assistant/code/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/home-automation/home-assistant/code/helmrelease.yaml
@@ -70,7 +70,7 @@ spec:
         enabled: true
         className: nginx
         hosts:
-          - host: &host "{{ .Release.Name }}.${DOMAIN}"
+          - host: &host "code.${DOMAIN}"
             paths:
               - path: /
                 service:
