--- a/kubernetes/clusters/k2s/home-automation/home-assistant/code/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/home-automation/home-assistant/code/helmrelease.yaml
@@ -69,6 +69,9 @@ spec:
       main:
         enabled: true
         className: nginx
+        annotations:
+          nginx.ingress.kubernetes.io/auth-url: https://oauth.nucstack.com/oauth2/auth
+          nginx.ingress.kubernetes.io/auth-signin: https://oauth.nucstack.com/oauth2/start
         hosts:
           - host: &host "code.${DOMAIN}"
             paths:
