--- a/kubernetes/clusters/k0s/monitoring/kustomization.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   # Flux-Kustomizations
   - ./grafana/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
-  #- ./loki/ks.yaml
+  - ./loki/ks.yaml
   - ./thanos/ks.yaml
   - ./unpoller/ks.yaml
   #- ./vector/ks.yaml
