--- a/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/helmrelease.yaml
@@ -58,6 +58,8 @@ spec:
             port: 6000
           kubernetes:
             port: 6010
+          unifi:
+            port: 6020
     persistence:
       config:
         enabled: true
