--- a/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/resources/vector.yaml
+++ b/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/resources/vector.yaml
@@ -100,9 +100,9 @@ sinks:
       node: '{{ kubernetes.pod_node_name }}'
 
   unifi:
-    inputs: ["unifi_source"]
+    inputs: ["unifi_firewall_remap"]
     type: loki
-    endpoint: http://loki-gateway.observability.svc.cluster.local
+    endpoint: http://loki-gateway.monitoring.svc.cluster.local
     encoding: { codec: json }
     out_of_order_action: accept
     remove_label_fields: true
