drop retention remove affinity

--- a/kubernetes/clusters/k0s/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/loki/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
         memberlist:
           join_members: ["loki-memberlist"]
         limits_config:
-          retention_period: 14d
+          retention_period: 5d
           enforce_metric_name: false
           reject_old_samples: true
           reject_old_samples_max_age: 168h
@@ -61,7 +61,7 @@ spec:
                 period: 24h
         common:
           path_prefix: /var/loki
-          replication_factor: 1
+          replication_factor: 2
           storage:
             s3:
               s3: null
@@ -105,7 +105,7 @@ spec:
         analytics:
           reporting_enabled: false
     gateway:
-      replicas: 1
+      replicas: 2
       image:
         registry: ghcr.io
       ingress:
@@ -119,8 +119,9 @@ spec:
         tls:
           - hosts:
               - *host
+        affinity: ""
     read:
-      replicas: 1
+      replicas: 2
       persistence:
         storageClass: local-path
       extraVolumeMounts:
@@ -129,12 +130,14 @@ spec:
       extraVolumes:
         - name: rules
           emptyDir: {}
+      affinity: ""
     write:
-      replicas: 1
+      replicas: 2
       persistence:
         storageClass: local-path
+      affinity: ""
     backend:
-      replicas: 1
+      replicas: 2
       persistence:
         storageClass: local-path
       extraVolumeMounts:
@@ -148,6 +151,7 @@ spec:
             name: loki-alerting-rules
         - name: scratch
           emptyDir: {}
+      affinity: ""
     monitoring:
       dashboards:
         annotations:
