--- a/kubernetes/clusters/k0s/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/loki/app/helmrelease.yaml
@@ -119,7 +119,7 @@ spec:
         tls:
           - hosts:
               - *host
-        affinity: ""
+        affinity: {}
     read:
       replicas: 2
       persistence:
@@ -130,12 +130,12 @@ spec:
       extraVolumes:
         - name: rules
           emptyDir: {}
-      affinity: ""
+      affinity: {}
     write:
       replicas: 2
       persistence:
         storageClass: local-path
-      affinity: ""
+      affinity: {}
     backend:
       replicas: 2
       persistence:
@@ -151,7 +151,7 @@ spec:
             name: loki-alerting-rules
         - name: scratch
           emptyDir: {}
-      affinity: ""
+      affinity: {}
     monitoring:
       dashboards:
         annotations:
