--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/resources/alertmanager.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/resources/alertmanager.yaml
@@ -30,12 +30,12 @@ receivers:
         username: "Prometheus"
         send_resolved: true
         title: |-
-          [{{ .Status }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] {{ if ne .CommonAnnotations.summary ""}}{{ .CommonAnnotations.summary }}{{ else }}{{ .CommonLabels.alertname }}{{ end }}
+          [`{`{ .Status `}`}`{`{ if eq .Status "firing" `}`}:`{`{ .Alerts.Firing | len `}`}`{`{ end `}`}] `{`{ if ne .CommonAnnotations.summary ""`}`}`{`{ .CommonAnnotations.summary `}`}`{`{ else `}`}`{`{ .CommonLabels.alertname `}`}`{`{ end `}`}
         text: >-
-          {{ range .Alerts -}} 
-            **Alert:** {{ .Annotations.title }}{{ if .Labels.severity }} - `{{ .Labels.severity }}`{{ end }}
-          **Description:** {{ if ne .Annotations.description ""}}{{ .Annotations.description }}{{else}}N/A{{ end }}
+          `{`{ range .Alerts -`}`} 
+            **Alert:** `{`{ .Annotations.title `}`}`{`{ if .Labels.severity `}`} - ``{`{ .Labels.severity `}`}``{`{ end `}`}
+          **Description:** `{`{ if ne .Annotations.description ""`}`}`{`{ .Annotations.description `}`}`{`{else`}`}N/A`{`{ end `}`}
           **Details:**
-            {{ range .Labels.SortedPairs }} • *{{ .Name }}:* `{{ .Value }}`
-            {{ end }}
-          {{ end }}
+            `{`{ range .Labels.SortedPairs `}`} • *`{`{ .Name `}`}:* ``{`{ .Value `}`}`
+            `{`{ end `}`}
+          `{`{ end `}`}
