--- a/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/resources/vector.yaml
+++ b/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/resources/vector.yaml
@@ -20,9 +20,9 @@ sources:
     address: 0.0.0.0:6010
 
   unifi_source:
-    type: syslog
+    type: vector
+    version: "2"
     address: 0.0.0.0:6020
-    mode: udp
 
 #
 # Transforms
@@ -37,38 +37,6 @@ transforms:
       .custom_app_name = .pod_labels."app.kubernetes.io/name" || .pod_labels.app || .pod_labels."k8s-app" || "unknown"
       # Drop pod_labels
       del(.pod_labels)
-
-  # [63950.153039] [wan-local-default-D]IN=eth4 OUT= MAC=xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx SRC=xxx.xxx.xxx.xxx DST=xxx.xxx.xxx.xxx LEN=40 TOS=0x00 PREC=0x00 TTL=240 ID=60610 PROTO=TCP SPT=53451 DPT=2002 WINDOW=1024 RES=0x00 SYN URGP=0
-  unifi_firewall_route:
-    type: route
-    inputs: ["unifi_source"]
-    route:
-      firewall: |
-        .facility == "kern" && match!(.message, r'^\[(.*?)\].(.*)')
-
-  unifi_firewall_remap:
-    type: remap
-    inputs: ["unifi_firewall_route.firewall"]
-    source: |
-      # Parse firewall rule message
-      split_message, split_err = parse_regex(.message, r'^\[.*\].\[(?P<rule>.*?)\](?P<fields>.*)')
-      if split_err != null {
-          abort
-      }
-      # Extract separate fields from message
-      split_message.fields, split_err = strip_whitespace(split_message.fields)
-      if split_err != null {
-          abort
-      }
-      .message, parse_err = parse_key_value(split_message.fields, whitespace: "strict")
-      if parse_err != null {
-          abort
-      }
-      # Add more information about the triggered rule
-      .message.RULE, parse_err = parse_regex(split_message.rule, r'^(?P<from_zone>\w+)-(?P<to_zone>\w+)-(?P<id>\w+)-(?P<action>\w+)$')
-      if parse_err != null {
-          abort
-      }
 
 #
 # Sinks
@@ -100,7 +68,7 @@ sinks:
       node: '{{ kubernetes.pod_node_name }}'
 
   unifi:
-    inputs: ["unifi_firewall_remap"]
+    inputs: ["unifi_source"]
     type: loki
     endpoint: http://loki-gateway.monitoring.svc.cluster.local
     encoding: { codec: json }
