--- a/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/resources/vector.yaml
+++ b/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/resources/vector.yaml
@@ -101,7 +101,7 @@ sinks:
     endpoint: http://loki-gateway.monitoring.svc.cluster.local
     encoding: { codec: json }
     out_of_order_action: accept
-    remove_label_fields: true
+    remove_label_fields: false
     remove_timestamp: true
     labels:
       app: 'unifi-firewall'
