add FWE log event labels

--- a/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/resources/vector.yaml
+++ b/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/resources/vector.yaml
@@ -105,3 +105,11 @@ sinks:
     remove_timestamp: true
     labels:
       app: 'unifi-firewall'
+      interface_in: '{{ message.IN }}'
+      interface_out: '{{ message.OUT }}'
+      protocol: '{{ message.PROTO }}'
+      description: '{{ message.DESCR }}'
+      source_ip: '{{ message.SRC }}'
+      source_port: '{{ message.SPT }}'
+      dest_ip: '{{ message.DST }}'
+      dest_port: '{{ message.DPT }}'
