--- a/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/helmrelease.yaml
@@ -50,6 +50,7 @@ spec:
         type: LoadBalancer
         annotations:
           external-dns.alpha.kubernetes.io/hostname: "vector.${DOMAIN}"
+          io.cilium/global-service: "true"
           io.cilium/lb-ipam-ips: 192.168.8.244
         ports:
           http:
