--- a/kubernetes/clusters/k1s/monitoring/kustomization.yaml
+++ b/kubernetes/clusters/k1s/monitoring/kustomization.yaml
@@ -7,4 +7,5 @@ resources:
   - ./namespace.yaml
   - ./externalsecret.yaml
   # Flux-Kustomizations
+  - ./kube-prometheus-stack/ks.yaml
   - ./vector/ks.yaml
