--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -156,7 +156,7 @@ spec:
         retention: 2d
         retentionSize: 15GB
         externalLabels:
-          cluster: k0s
+          cluster: "${ENVIRONMENT}"
         storageSpec:
           volumeClaimTemplate:
             spec:
