--- a/kubernetes/clusters/k1s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/clusters/k1s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -30,7 +30,7 @@ spec:
     - name: local-path-provisioner
       namespace: kube-system
   values:
-    fullnameOverride: "${ENVIRONMENT}"
+    fullnameOverride: "prom-${ENVIRONMENT}"
     crds:
       enabled: true
     cleanPrometheusOperatorObjectNames: true
