add prometheus scrapeconfigs

--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/kustomization.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/kustomization.yaml
@@ -5,7 +5,9 @@ kind: Kustomization
 resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
+  - ./services
   - ./prometheusrules
+  - ./scrapeconfigs
 configMapGenerator:
   - name: alertmanager-config-tpl
     files:
