--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k1s.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k1s.yaml
@@ -7,13 +7,9 @@ metadata:
 spec:
   honorLabels: true
   scrapeInterval: 30s
-  scheme: HTTP
   staticConfigs:
     - targets: ["prom-k1s-prometheus:9090"]
   metricsPath: /federate
   # params:
-  #   "match[]":
-  #     - '{job="kopia"}'
-  #     - '{job="node-exporter"}'
-  #     - '{job="minio"}'
-  #     - '{job="smartctl-exporter"}'
+  #   'match[]':
+  #     - '{job="prometheus"}'
