--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k1s.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k1s.yaml
@@ -10,6 +10,6 @@ spec:
   staticConfigs:
     - targets: ["prom-k1s-prometheus:9090"]
   metricsPath: /federate
-  # params:
-  #   'match[]':
-  #     - '{job="prometheus"}'
+  params:
+    'match[]':
+      - '{__name__=~".+"}'
