--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k1s.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k1s.yaml
@@ -11,6 +11,8 @@ spec:
     - targets: ["prom-k1s-prometheus:9090"]
   metricsPath: /federate
   params:
-    'match[]':
-      - '{job="prometheus"}'
+    "match[]":
+      - '{job="database"}'
+      - '{job="flux-system"}'
+      - '{job="volsync"}'
   
