--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k2s.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k2s.yaml
@@ -11,9 +11,9 @@ spec:
   staticConfigs:
     - targets: ["prom-k2s-prometheus:9090"]
   metricsPath: /federate
-  # params:
-  #   "match[]":
-  #     - '{job="kopia"}'
-  #     - '{job="node-exporter"}'
-  #     - '{job="minio"}'
-  #     - '{job="smartctl-exporter"}'
+  params:
+    "match[]":
+      - '{job="database"}'
+      - '{job="flux-system"}'
+      - '{job="volsync"}'
+  
