--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k2s.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k2s.yaml
@@ -12,7 +12,10 @@ spec:
   metricsPath: /federate
   params:
     "match[]":
+      - '{job="media"}'
+      - '{job="home-automation"}'
       - '{job="database"}'
       - '{job="flux-system"}'
+      - '{job="rook-ceph-mgr"}'
       - '{job="volsync"}'
   
