--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k1s.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k1s.yaml
@@ -12,7 +12,4 @@ spec:
   metricsPath: /federate
   params:
     "match[]":
-      - '{job="database"}'
-      - '{job="flux-system"}'
-      - '{job="volsync"}'
-  
+      - '{job="node-exporter"}'
