--- a/kubernetes/clusters/k2s/media/immich/database/podmonitor.yaml
+++ b/kubernetes/clusters/k2s/media/immich/database/podmonitor.yaml
@@ -7,6 +7,6 @@ metadata:
 spec:
   selector:
     matchLabels:
-      postgresql: immich
+      cnpg.io/cluster: immich-db
   podMetricsEndpoints:
   - port: metrics
