--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k2s.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k2s.yaml
@@ -15,4 +15,5 @@ spec:
   params:
     "match[]":
       - '{job="node-exporter"}'
-  
+      - '{job="home-automation/home-assistant-database"}'
+      - '{job="media/immich-database"}'
