--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k2s.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k2s.yaml
@@ -10,7 +10,7 @@ spec:
   staticConfigs:
     - targets: ["prom-k2s-prometheus:9090"]
       labels:
-        clusterID: k2s
+        cluster: k2s
   metricsPath: /federate
   params:
     "match[]":
