--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k1s.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k1s.yaml
@@ -10,7 +10,7 @@ spec:
   staticConfigs:
     - targets: ["prom-k1s-prometheus:9090"]
       labels:
-        clusterID: k1s
+        cluster: k1s
   metricsPath: /federate
   params:
     "match[]":
