add kube-state-metrics job

--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k2s.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k2s.yaml
@@ -14,6 +14,7 @@ spec:
   metricsPath: /federate
   params:
     "match[]":
+      - '{job="kube-state-metrics"}'
       - '{job="node-exporter"}'
       - '{job="home-automation/home-assistant-database"}'
       - '{job="media/immich-database"}'
