--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k2s.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k2s.yaml
@@ -9,8 +9,8 @@ spec:
   scrapeInterval: 30s
   staticConfigs:
     - targets: ["prom-k2s-prometheus:9090"]
-      labels:
-        cluster: k2s
+      # labels:
+      #   cluster: k2s
   metricsPath: /federate
   params:
     "match[]":
