--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -135,7 +135,7 @@ spec:
             vault.hashicorp.com/agent-inject: 'true'
             vault.hashicorp.com/agent-inject-token: 'true'
             vault.hashicorp.com/role: monitoring
-        replicaExternalLabelName: __replica__
+        replicaExternalLabelName: ""
         ruleSelectorNilUsesHelmValues: false
         serviceMonitorSelectorNilUsesHelmValues: false
         podMonitorSelectorNilUsesHelmValues: false
