fix cluster labelling

--- a/kubernetes/clusters/k1s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/clusters/k1s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -110,6 +110,7 @@ spec:
           io.cilium/global-service: "true"
       prometheusSpec:
         replicas: 1
+        replicaExternalLabelName: ""
         ruleSelectorNilUsesHelmValues: false
         serviceMonitorSelectorNilUsesHelmValues: false
         podMonitorSelectorNilUsesHelmValues: false
