--- a/kubernetes/clusters/k2s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -112,6 +112,7 @@ spec:
           io.cilium/global-service: "true"
       prometheusSpec:
         replicas: 1
+        replicaExternalLabelName: ""
         ruleSelectorNilUsesHelmValues: false
         serviceMonitorSelectorNilUsesHelmValues: false
         podMonitorSelectorNilUsesHelmValues: false
