--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k2s.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k2s.yaml
@@ -5,7 +5,7 @@ kind: ScrapeConfig
 metadata:
   name: k2s
 spec:
-  honorLabels: true
+  honorLabels: false
   scrapeInterval: 30s
   staticConfigs:
     - targets: ["prom-k2s-prometheus:9090"]
