--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -155,8 +155,8 @@ spec:
               key: objstore.yml
         retention: 2d
         retentionSize: 15GB
-        externalLabels:
-          cluster: "${ENVIRONMENT}"
+        # externalLabels:
+        #   cluster: "${ENVIRONMENT}"
         storageSpec:
           volumeClaimTemplate:
             spec:
