--- a/kubernetes/clusters/k2s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -126,8 +126,8 @@ spec:
           - new-service-discovery-manager
         retention: 2d
         retentionSize: 15GB
-        # externalLabels:
-        #   cluster: "${ENVIRONMENT}"
+        externalLabels:
+          cluster: "${ENVIRONMENT}"
         storageSpec:
           volumeClaimTemplate:
             spec:
