--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k1s.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/scrapeconfigs/k1s.yaml
@@ -5,12 +5,10 @@ kind: ScrapeConfig
 metadata:
   name: k1s
 spec:
-  honorLabels: true
+  honorLabels: false
   scrapeInterval: 30s
   staticConfigs:
     - targets: ["prom-k1s-prometheus:9090"]
-      labels:
-        cluster: k1s
   metricsPath: /federate
   params:
     "match[]":
