fix alertmanager config

--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/externalsecret.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/externalsecret.yaml
@@ -9,13 +9,7 @@ spec:
     name: vault-kv-backend
     kind: SecretStore
   target:
-    name: alertmanager-secret
-    template:
-      templateFrom:
-        - configMap:
-            name: alertmanager-config-tpl
-            items:
-              - key: alertmanager.yaml
+    name: alertmanager
   dataFrom:
     - extract:
         key: /flux-system/notification
