--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -251,6 +251,7 @@ spec:
           multicluster:
             etcd:
               enabled: true
+  valuesFrom:
     - targetPath: alertmanager.config.global.slack_api_url
       kind: Secret
       name: alertmanager
