--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -58,11 +58,11 @@ tasks:
       - rm pki_intermediate.csr
   add-intca-issuer:
     cmds:
-      - vault write pki/int_ca/roles/{{.ENVIRONMENT}} issuer_ref="$(vault read -field=default pki/int_ca/config/issuers)" allowed_domains="admin-{{.ENVIRONMENT}},remote,svc,cilium.io" allowed_uri_sans="admin-{{.ENVIRONMENT}},remote,clustermesh-apiserver" allow_bare_domains=true allow_subdomains=true max_ttl="720h"
-      - vault read --format=json pki/int_ca/cert/ca | jq -r .data.certificate > ca.cert.pem
-      - kubectl --context {{.ENVIRONMENT}} -n cert-manager delete secret vault-root-ca || true
-      - kubectl --context {{.ENVIRONMENT}} -n cert-manager create secret generic vault-root-ca --from-file=ca.cert.pem=ca.cert.pem || true
-      - rm ca.cert.pem
+      - vault write pki/int_ca/roles/{{.ENVIRONMENT}} issuer_ref="$(vault read -field=default pki/int_ca/config/issuers)" allowed_domains="admin-{{.ENVIRONMENT}},remote,svc,cilium.io" allowed_uri_sans="admin-{{.ENVIRONMENT}},remote,clustermesh-apiserver" allow_bare_domains=true allow_subdomains=true max_ttl="2160h"
+      #- vault read --format=json pki/int_ca/cert/ca | jq -r .data.certificate > ca.cert.pem
+      #- kubectl --context {{.ENVIRONMENT}} -n cert-manager delete secret vault-root-ca || true
+      #- kubectl --context {{.ENVIRONMENT}} -n cert-manager create secret generic vault-root-ca --from-file=ca.cert.pem=ca.cert.pem || true
+      #- rm ca.cert.pem
 
   # oidc
   enable-oidc-provider:
