--- a/kubernetes/clusters/k0s/monitoring/loki/app/rules/loki-alerting-rules.yaml
+++ b/kubernetes/clusters/k0s/monitoring/loki/app/rules/loki-alerting-rules.yaml
@@ -26,3 +26,16 @@ groups:
         annotations:
           app: "{{ $labels.app }}"
           summary: "{{ $labels.app }} is unable to connect to postgres"
+
+  - name: unifi-ssh-auth
+    rules:
+      - alert: UnifiSSHAuthEvent
+        expr: |
+          sum by (app) (count_over_time({app="unifi-auth"} |~ "(?i)session opened[2m])) > 0
+        for: 2m
+        labels:
+          severity: critical
+          category: logs
+        annotations:
+          app: "{{ $labels.app }}"
+          summary: "{{ $labels.app }} ssh session opened"
