--- a/kubernetes/clusters/k2s/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/home-automation/home-assistant/app/helmrelease.yaml
@@ -72,9 +72,9 @@ spec:
             resources:
               requests:
                 cpu: 10m
-                memory: 100Mi
+                memory: 128Mi
               limits:
-                memory: 750Mi
+                memory: 1Gi
     service:
       main:
         ports:
